# GitPRComparisonTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cistring.h  comparitor.h  gittreenode.cpp  gittreenode.h  main.cpp
